style(fix): align header and maps page to the same height for consistency

--- a/frontend/src/Styles/globals.scss
+++ b/frontend/src/Styles/globals.scss
@@ -26,7 +26,7 @@ a {
 
 main {
   min-height: 100dvh;
-  width: 1279px;
+  width: 100%;
   margin: 0 auto;
   padding: 8rem 1rem 0 1rem;
 }
